# dunolint-actions

./: CHANGES.md  README.md  RELEASING.md  THIRD_PARTY_LICENSES.md
.github/: crs-config.json
.github/workflows/: ci.yml  create-release-on-tag.yml  crs.yml  dunolint-using-local-actions.yml  move-v1-tag-on-stable-release.yml  ocaml-ci.yml  test-setup-dunolint.yml
lint-check/: README.md  action.yml  lint-check.sh
setup-dunolint/: DIGESTS.md  README.md  action.yml  install.sh  test-install.sh
test/: .gitignore  dune  dune-project  dunolint  dunolint-actions-test.opam  dunolint.sexp  main.ml
third-party-license/: README.md
