(lang dune 3.20)

(name dunolint-actions-test)

(generate_opam_files)

(license "MIT")

(authors "Mathieu Barbin")

(maintainers "Mathieu Barbin <opensource@mbarbin.org>")

(source
 (github mbarbin/dunolint-actions))

(package
 (name dunolint-actions-test)
 (synopsis "A dunolint config to test the dunolint-actions repo")
 (depends
  (ocaml
   (>= 4.14))
  (dunolint-lib
   (>= 0.0.20250804))
  (sexplib0
   (>= v0.16.0))))
